--- a/src/html/page.pug
+++ b/src/html/page.pug
@@ -58,7 +58,7 @@ block content
             +e.comments 2 
               span комментария
           +e.btn
-            +b.A.link(href="index.html") 
+            +b.A.link(class="up" href="index.html") 
               span Вернуться к списку записей
 
 
