--- a/src/css/partials/components/_header.scss
+++ b/src/css/partials/components/_header.scss
@@ -176,4 +176,7 @@
   position: relative;
   right: 5px;
   z-index: 2;
+  background-image: url(../img/svg/find.svg);
+  background-position: 0 0;
+  background-size: cover;
 }
