--- a/src/css/partials/components/_post.scss
+++ b/src/css/partials/components/_post.scss
@@ -28,14 +28,35 @@
     width: 100%;
     height: auto;
     position: relative;
+    &:before{
+      content: '';
+      background-color: #000;
+      opacity: .5;
+      position: absolute;
+      top: 16px;
+      right: 20px;
+      z-index: 2;
+      width: 28px;
+      height: 28px;
+      border-radius: 2px;
+      @media (min-width: $screen-xl){
+        right: 60px;
+      }
+    }
     &:after{
       content: '';
       display: block;
-      @include sprite($s-warning-18);
+      // @include sprite($s-warning-18);
       position: absolute;
+      z-index: 3;
       top: 20px;
       right: 20px;
-      opacity: .5;
+      // background-position: 0 0;
+      background-size: cover;
+      background-image: url(../img/svg/share.svg);
+      width: 24px;
+      height: 19px;
+
       @media (min-width: $screen-xl){
         right: 60px;
       }
@@ -78,7 +99,7 @@
   }
 
   &__tags{
-    padding: 0 150px 0 10px;
+    padding: 0 120px 0 10px;
     @media (min-width: $screen-md){
       padding: 0 150px 0 20px;
     }
@@ -97,7 +118,7 @@
       font-size: 13px;
     }
   }
-  &__tags-block{
+  &__tags-block{    
     @media (min-width: $screen-md){
       display: flex;
       align-items: baseline
@@ -218,7 +239,7 @@
 .functions{
   font-size: 13px;
   line-height: (24/13);
-  padding: 5px 10px;
+  padding: 0 10px;
   display: flex;
   justify-content: space-between;
   background-color: #f0f0f0;
@@ -235,6 +256,9 @@
   &__wrapper{
     display: flex;
   }
+  .link{
+    padding: 5px 10px;
+  }
 }
 .counters{
   display: flex;
@@ -244,8 +268,16 @@
     &:before{
       content: '';
       display: inline-block;
+      vertical-align: middle;
+      margin-bottom: 2px;
       margin-right: 5px;
-      @include sprite($s-eye);
+      // @include sprite($s-eye);
+      // background-position: 0 0;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(../img/svg/visible.svg);
+      width: 19px;
+      height: 20px;      
     }
     span{
       display: none;
@@ -259,8 +291,14 @@
     &:before{
       content: '';
       display: inline-block;
+      vertical-align: text-top;
       margin-right: 5px;
-      @include sprite($s-comment);
+      // @include sprite($s-comment);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(../img/svg/comment.svg);
+      width: 14px;
+      height: 14px; 
     }
     span{
       display: none;
@@ -300,9 +338,15 @@
   &:before{
     content: '';
     display: inline-block;
-    vertical-align: baseline;
-    @include sprite($s-heart);
+    vertical-align: text-top;
+    // @include sprite($s-heart);
     margin-right: .3em;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url(../img/svg/like.svg);
+    width: 15px;
+    height: 14px;
   }
   span{
     display: none;
@@ -316,7 +360,8 @@
     &:before{
       content: '';
       display: inline-block;
-      @include sprite($s-heart-active);
+      // @include sprite($s-heart-active);
+      background-image: url(../img/svg/like-red.svg);
     }
   }
 }
