--- a/src/css/partials/components/_subscribe.scss
+++ b/src/css/partials/components/_subscribe.scss
@@ -57,7 +57,13 @@
       &:before{
         content: '';
         display: inline-block;
-        @include sprite($s-mail);
+        // @include sprite($s-mail);
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-image: url(../img/svg/letter-grey.svg);
+        width: 20px;
+        height: 20px;
         opacity: .8;
         position: absolute;
         top: 50%;
@@ -181,7 +187,13 @@
     &:before{
       content: '';
       display: inline-block;          
-      @include sprite($s-check);
+      // @include sprite($s-check);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-image: url(../img/svg/accept.svg);
+      width: 14px;
+      height: 14px;
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
