--- a/src/html/partials/components/_header.pug
+++ b/src/html/partials/components/_header.pug
@@ -5,7 +5,8 @@ include ../abstracts/bemto/bemto.pug
   +e.inner
 
     +e.slogan
-      a(href="index.html") Best Girl
+      a(href="index.html" title="Вернуться на главную страницу блога Best Girl") 
+        img(src="img/svg/logo.svg" alt="Best Girl: женский блог о красоте, здоровье, увлечениях и образе жизни для девушек")
 
     +e.nav                 
       // Nav
