--- a/src/css/partials/components/_post.scss
+++ b/src/css/partials/components/_post.scss
@@ -293,6 +293,7 @@
       display: inline-block;
       vertical-align: text-top;
       margin-right: 5px;
+      margin-top: 1px;
       // @include sprite($s-comment);
       background-repeat: no-repeat;
       background-size: contain;
