--- a/src/css/partials/components/_subscribe.scss
+++ b/src/css/partials/components/_subscribe.scss
@@ -162,7 +162,7 @@
     @media (min-width: $screen-md){
       // columns: 4;
     }
-    @media (min-width: $screen-md){
+    @media (min-width: $screen-xl){
       font-size: 14px;
     }
   }
