--- a/src/css/partials/components/_sidebar.scss
+++ b/src/css/partials/components/_sidebar.scss
@@ -249,6 +249,7 @@
   padding-left: 0;
   margin: 0;
   list-style-type: none;
+  font-size: 14px;
   &__item{
     a{
       color: $text-dark-grey;
