--- a/src/css/partials/components/_header.scss
+++ b/src/css/partials/components/_header.scss
@@ -1,12 +1,13 @@
 .header{
   background-color: $dark-grey;
   &__inner{
-    padding: 7px 20px;
+    padding: 10px 20px 7px;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     text-align: center;
     @media (min-width: $screen-md){
+      padding: 7px 20px 7px;
       align-items: center;
     }
     @media (min-width: $screen-xl){
