--- a/src/html/partials/components/_header.pug
+++ b/src/html/partials/components/_header.pug
@@ -32,7 +32,8 @@ include ../abstracts/bemto/bemto.pug
         +e.FORM.form(action='', method='')
           +e.LABEL.label
             +e.INPUT.input(type='text', name='Поиск', placeholder="Поиск по сайту")
-            +b.BUTTON.loupe(type="submit")
+            +b.A.loupe(href="#")
+            //- +b.BUTTON.loupe(type="submit")
 
 
 
