--- a/src/html/partials/components/_head.pug
+++ b/src/html/partials/components/_head.pug
@@ -17,4 +17,4 @@ head
 
   link(rel='stylesheet', href='css/style.css')
 
-  //- script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
+  script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js")
